router: runs on the Rust/Go fc-router task definition as it stands; Teams alerts
The owner runs the router on ECS from a task definition written for the Rust
fc-router (the live image is Go, which ignores most of it). Java now honours
every variable in it:

- API_PORT (FC_API_PORT, API_PORT, PORT). The image no longer sets
  FC_API_PORT itself, which would have beaten a task's API_PORT; its
  HEALTHCHECK probes whichever port is configured.
- FLOWCATALYST_CONFIG_INTERVAL (canonical FC_ROUTER_CONFIG_INTERVAL_SECONDS),
  default 300; a set-but-bad value warns and falls back.
- Standby: the FLOWCATALYST_STANDBY_* / FLOWCATALYST_REDIS_URL /
  FLOWCATALYST_INSTANCE_ID names, lock TTL and heartbeat configurable,
  heartbeat >= TTL a startup error naming both variables. Default lock key
  fc:router:leader (owner ruling; Go still says fc:server:leader).
- Teams: NOTIFICATION_TEAMS_WEBHOOK_URL / _ENABLED / NOTIFICATION_BATCH_INTERVAL
  (default 300), and the payload is now the Rust router's Adaptive Card - one
  summary card per interval (counts per severity and category, bounded
  aggregation, no flush-at-20), CRITICAL at once as its own card. An explicit
  NOTIFICATION_TEAMS_ENABLED=false disables even with a URL (Rust ignores it).
- RUST_LOG: the bare level sets the root, fc_router=<level> sets
  io.flowcatalyst.router, other targets ignored; FC_LOG_LEVEL still wins.

Found by running the image with that environment: a config URL that has never
answered was dropped in silence, so the router ran with no queues and Teams
heard nothing. It now raises a once-per-streak CONFIGURATION warning (the
Rust router warns on every failed sync) and reports recovery.

Verified end to end: the ARM64 image built from this tree, run with the task
definition's variables and API_PORT=8085, came up healthy on 8085 and posted
a Teams summary card, captured and decoded, in the Rust layout. Ten mutants
killed (brief report + the config warning). docs/spec/router-env.md lists
every Rust router va